# SeriesBCRP

./: LICENSE  Python en VSC.txt  README.md  setup.cfg
src/seriesbcrp2/: data.py
src/seriesbcrp2.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/seriesbcrperu.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/timeseriesbcrp/: data.py
