[metadata]
name = seriesbcrp2
version = 0.0.2
author = abnercasallo
author_email = abner.casallo@unmsm.edu.pe
description = Time Series analysis with data from BCRP
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/abnercasallo/TimeSeries-BCRP 
project_urls =
    Bug Tracker = https://github.com/abnercasallo/SeriesBCRP/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src